@@ -1,8 +1,7 @@
 package com.kyohwee.ojt.domain.service.ocr;
 
-import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.kyohwee.ojt.domain.dto.BusinessDocument;
-import lombok.Data;
+import com.kyohwee.ojt.domain.dto.ValidateResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
@@ -24,7 +23,7 @@ public class BusinessVerificationService {
 
     private final RestTemplate restTemplate;
 
-    /** 공공데이터 포털 진위확인 엔드포인트 (application.yml 에서 설정) */
+    /** 공공데이터 포털 진위확인 엔드포인트 (application.yml) */
     @Value("${openapi.business.validate-url}")
     private String validateUrl;
 
@@ -33,52 +32,75 @@ public class BusinessVerificationService {
     private String serviceKey;
 
     /**
-     * 기존 verify 메소드 유지 (직접 DTO를 넘겼을 때)
+     * 사업자등록증 진위확인용 페이로드 설계
      */
-    public String verify(BusinessDocument doc) {
+    private Map<String, String> makeBiz(String bNo, String startDt, String pNm) {
+        Map<String, String> biz = new HashMap<>();
+        biz.put("b_no",     bNo);
+        biz.put("start_dt", startDt);
+        biz.put("p_nm",     pNm);
+        biz.put("p_nm2",    "");  // 공동대표자 없는 경우 빈 문자열
+        biz.put("b_nm",     "");
+        biz.put("corp_no",  "");
+        biz.put("b_sector", "");
+        biz.put("b_type",   "");
+        biz.put("b_adr",    "");
+        return biz;
+    }
+
+    /**
+     * 진위확인 API 호출 및 응답 처리
+     */
+    public ValidateResponse.BusinessData verify(BusinessDocument doc) {
         String url = validateUrl + "?serviceKey=" + serviceKey + "&returnType=JSON";
 
-        Map<String,Object> payload = new HashMap<>();
-        Map<String,String> biz = new HashMap<>();
-        biz.put("b_no", doc.getBusinessNumber());
-        biz.put("start_dt", doc.getStartDate());
-        biz.put("p_nm", doc.getOwnerName());
-        payload.put("businesses", Collections.singletonList(biz));
-        log.info("b_no : {}, start_dt : {}, p_nm : {}", doc.getBusinessNumber(), doc.getStartDate(), doc.getOwnerName());
+        // 1) 숫자만 남겨서 포맷 정리
+        String bNo     = doc.getBusinessNumber().replaceAll("\\D+", "");
+        String startDt = doc.getStartDate().replaceAll("\\D+", "");
+
+        // 2) 페이로드 준비
+        Map<String,String> biz = makeBiz(bNo, startDt, doc.getOwnerName());
+
+        Map<String,Object> payload = Map.of("businesses", List.of(biz));
+        log.info("Verify payload: {}", payload);
 
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
         HttpEntity<Map<String,Object>> request = new HttpEntity<>(payload, headers);
 
-        ResponseEntity<ValidateResponse> resp = restTemplate.postForEntity(url, request, ValidateResponse.class);
+        // 3) 호출
+        ResponseEntity<ValidateResponse> resp =
+                restTemplate.postForEntity(url, request, ValidateResponse.class);
 
-        if (resp.getStatusCode() == HttpStatus.OK && resp.getBody()!=null && !resp.getBody().getData().isEmpty()) {
-            ValidateResponse.Result r = resp.getBody().getData().get(0);
-            doc.setVerificationStatus(r.getValidYn());
-            doc.setVerificationMessage(r.getValidMsg());
-            return r.getValidYn();
-        } else {
+        if (resp.getStatusCode() != HttpStatus.OK || resp.getBody() == null) {
             throw new RuntimeException("진위확인 API 오류: HTTP " + resp.getStatusCode());
         }
+
+        ValidateResponse body = resp.getBody();
+
+        // 에러 응답 처리
+        if (!"OK".equals(body.getStatusCode())) {
+            log.error("진위확인 API 에러 status_code={}", body.getStatusCode());
+            return null;
+        }
+
+        // 정상 응답이지만 데이터가 없으면 예외
+        if (body.getData() == null || body.getData().isEmpty()) {
+            throw new RuntimeException("진위확인 결과 없음");
+        }
+
+        // 첫 번째 결과를 꺼내서 DTO에 담아 반환
+        ValidateResponse.BusinessData entry = body.getData().get(0);
+        doc.setVerificationStatus(entry.getValid());
+        doc.setVerificationMessage(entry.getValidMsg());
+        return entry;
     }
 
     /**
-     * 배치 코드 쪽에서 사용하기 위한 alias 메소드
+     * 배치 코드용 alias
      */
-    public String checkBusiness(BusinessDocument doc) {
+    public ValidateResponse.BusinessData checkBusiness(BusinessDocument doc) {
         return verify(doc);
     }
 
-
-    @Data
-    @JsonIgnoreProperties(ignoreUnknown = true)
-    public static class ValidateResponse {
-        private List<Result> data;
-        @Data
-        @JsonIgnoreProperties(ignoreUnknown = true)
-        public static class Result {
-            private String validYn;    // 진위여부 코드
-            private String validMsg;   // 응답 메시지
-        }
-    }
 }
